<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Put ddd</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="operadora" >Cell Phone Company</string>
    <string name="codigo">Code</string>
    <string name="salvar">Salve</string>
    <string name = "remover"> Remove Cell Phone Company</string>
    <string name = "cancelar"> Cancel</string>
    <string name = "adicionar"> Add Cell Phone Company</string>
    <string name="confirmarRemove"> Are you sure?</string>
    <string name= "removido">Removed</string>
    <string name="sim"> Yes</string>
    <string name="nadaRemover">Nothing to remove</string>
    <string name="seuCodigoArea">Your Area Code</string>
    <string name="exemCodogoArea">79, 11...</string>
    <string name="realizadoSucess">Operation realised with sucess</string>
    <string name="seuCdAreaE"> Your Area Code is\t</string>
    <string name="codigoInvalido">Code Not Valid!</string>
    <string name="tratarNonoDigito">Dealing with ninth digit numbers</string>

</resources>